--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource-variable/faustina": "^5.0.9",
+    "@fontsource-variable/inter": "^5.0.16",
+    "@fontsource-variable/roboto-slab": "^5.0.18",
+    "@fontsource/roboto-condensed": "^5.0.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
