--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^3.0.1",
     "react-slick": "^0.29.0",
     "react-slick-carousel": "^0.14.9",
+    "react-typical": "^0.1.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
