--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "^3.0.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
