--- a/package.json
+++ b/package.json
@@ -7,12 +7,23 @@
     "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/roboto-slab": "^5.0.18",
     "@fontsource/roboto-condensed": "^5.0.14",
+    "@testing-library/jest-dom": "^6.5.4",
+    "@testing-library/react": "^15.4.0",
+    "@testing-library/user-event": "^14.5.2",
+    "animate.css": "^4.1.1",
+    "force": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.8.0",
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-slick-carousel": "^0.14.9",
+    "react-spring": "^9.7.3",
+    "react-typical": "^0.1.3",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^3.5.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,9 +50,6 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.0"
   }
