--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/roboto-slab": "^5.0.18",
     "@fontsource/roboto-condensed": "^5.0.14",
+    "@headlessui/react": "^1.7.18",
     "@testing-library/jest-dom": "^6.5.4",
     "@testing-library/react": "^15.4.0",
     "@testing-library/user-event": "^14.5.2",
