--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource-variable/roboto-slab": "^5.0.18",
     "@fontsource/roboto-condensed": "^5.0.14",
     "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
