--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "animate.css": "^4.1.1",
+    "i": "^0.3.7",
+    "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.0",
     "react-router-dom": "^6.22.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
-    "react-slick-carousel": "^0.14.9",
     "react-spring": "^9.7.3",
-    "react-typical": "^0.1.3",
     "slick-carousel": "^1.8.1",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
