--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "locomotive-scroll": "^5.0.0-beta.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.21.0",
